<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    style="?android:attr/buttonBarStyle"
    android:orientation="vertical"
    android:layout_gravity="center_vertical">


     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="horizontal">

         <Button
             android:id="@+id/button4"
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="@dimen/button_width"
             android:layout_height="@dimen/button_height"
             android:layout_margin="@dimen/button_margin"
             android:text="@string/boating_info"
             tools:layout_editor_absoluteX="43dp"
             tools:layout_editor_absoluteY="118dp" />

         <Button
             android:id="@+id/button"
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="@dimen/button_width"
             android:layout_height="@dimen/button_height"
             android:layout_margin="@dimen/button_margin"
             android:text="@string/list_of_state_parks"
             tools:layout_editor_absoluteX="43dp"
             tools:layout_editor_absoluteY="118dp" />
     </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/off_road_info" />

        <Button
            android:id="@+id/button3"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/passes" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button5"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/maps" />

        <Button
            android:id="@+id/button6"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/reservations" />

    </LinearLayout>

</LinearLayout>